# backend/openapi.yaml
@@ -381,6 +381,33 @@ paths:
       summary: Create Post
       tags:
       - posts
+  /posts/me:
+    get:
+      description: 自分の投稿一覧を取得
+      operationId: get_my_posts_posts_me_get
+      parameters:
+      - in: header
+        name: authorization
+        required: true
+        schema:
+          title: Authorization
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostsResponse'
+          description: Successful Response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+          description: Validation Error
+      summary: Get My Posts
+      tags:
+      - posts
   /signup:
     post:
       description: 匿名ユーザーとしてサインアップ
